# V3MathExpressionGenerator

./: .gitignore  .gitmodules  CMakeLists.txt  ChangeLog.md  README.md  V3MathExpressionGenerator.cabal  grammar.mpc  lang.txt  package.yaml  test.txt
app/: Main.hs
src/: Lang.hs  Syntax.hs  Type.hs  TypeCheck.hs  main.c  traversal.c
src/Parser/: Combinator.hs
src/Utils/: Annotation.hs  Miscs.hs
src/ast/: node.h
src/lang/: AST.h  Transpiler.h  lang.c  lang.h  transpile.c  types.c  types.h
src/lang/AST/: AST_Constructor.c  AST_Constructor.h  IO.h  Node.h  binop.h  constant.h  func.h  unop.h  variable.h
src/lang/Nodes/: BinaryOperator.h  Floating.h  Integer.h  UnaryOperator.h  Variable.h
src/utils/: array.h  array_general.c  array_io.c  hash.h  mpc_step.h
